Faresignaler historikk og skrevet om uttakutil